# photonic-forge

./: .editorconfig  .gitignore  .pre-commit-config.yaml  09_webgpu_vis.html  LICENSE  README.md  debug_imports.py  pyproject.toml
.github/workflows/: ci.yml
data/conversations/: demo-session-01.json
data/simulation_logs/: simulations.jsonl
docs/: index.md
docs/api/: core.md  optimize.md  solvers.md
docs/tutorials/: 01_getting_started.md  02_inverse_design.md
envs/: meep_env.yml
examples/: 01_hello_waveguide.py  02_optimize_coupler.py  03_bend_optimization.py  03_meep_simulation.py  04_mode_converter.py  05_wavelength_demux.py  06_constraints_demo.py  07_agent_design.py  08_natural_language_design.py  09_webgpu_vis.py  10_yield_optimization.py
src/photonic_forge/: __init__.py
src/photonic_forge/agent/: __init__.py  designer.py  llm.py  logger.py  strategy.py  tools.py
src/photonic_forge/core/: __init__.py  constants.py  geometry.py  materials.py
src/photonic_forge/neural_models/: __init__.py  dataloader.py  surrogate.py  training.py
src/photonic_forge/optimize/: __init__.py  algorithms.py  constraints.py  objective.py  parameterization.py  yield_analysis.py
src/photonic_forge/pdk/: __init__.py  cornerstone.py
src/photonic_forge/serv/: __init__.py  api.py  main.py
src/photonic_forge/serv/static/: fdtd.wgsl  index.html
src/photonic_forge/solvers/: __init__.py  base.py  meep_wrapper.py  metrics.py  simulation_store.py
src/photonic_forge/ui/: __init__.py  app.py
src/photonic_forge/vis/: __init__.py  exporter.py  template.html
tests/: __init__.py  conftest.py
tests/benchmarks/: test_components.py
tests/integration/: __init__.py  test_optimize_integration.py  test_web_prototype.py  test_workflow.py
tests/unit/: __init__.py  test_agent.py  test_constants.py  test_constraints.py  test_data_moat.py  test_gds_export.py  test_geometry.py  test_llm_agent.py  test_logger.py  test_materials.py  test_metrics.py  test_objective.py  test_parameterization.py  test_simulation_result.py  test_solver_interface.py  test_surrogate.py  test_yield.py
